# convert-case

./: .bumpversion.cfg  .cspell.json  .eslintrc.json  .gitignore  .mypy.ini  .pylintrc  .quickdocs.yml  .template.yml  .trufflehog3.yml  CONTRIBUTING.md  Gruntfile.js  README.md  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/actions/install/: action.yaml
.github/workflows/: docs.yml  publish.yml  review.yml
docs/: conf.py  index.rst
docs/sphinx/: conf.py  index.rst  scripts.js  styles.css
src/: __init__.py  __main__.py  camel.py  convert.py  definitions.py  exceptions.py  kebab.py  lower.py  pascal.py  sentence.py  snake.py  title.py  upper.py
test/: exceptions.py  loader.py  test_camel.py  test_errors.py  test_kebab.py  test_pascal.py  test_sentence.py  test_snake.py  test_title.py  test_upper.py
tests/: loader.py  test_camel.py  test_errors.py  test_kebab.py  test_lower.py  test_pascal.py  test_sentence.py  test_snake.py  test_title.py  test_upper.py  tests.md
