[metadata]
name = convert-case
version = 0.1.0

description = Convert between string cases with built-in case inference.
url = https://github.com/JoelLefkowitz/convert-case

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

project_urls =
   Bug Tracker   = https://github.com/JoelLefkowitz/convert-case/issues
   CI            = https://github.com/JoelLefkowitz/convert-case/actions
   Documentation = https://convert-case.readthedocs.io/en/latest/
   Source Code   = https://github.com/JoelLefkowitz/convert-case

classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
# Rename the package
packages = convert_case

# Map the new package name to its source directory
package_dir =
    convert_case = src

# Apply any local MANIFEST.in to include subpackages
include_package_data = True

python_requires = >= 3.6

setup_requires = 
    setuptools

install_requires =

[options.packages.find]
exclude =
    tests
    
[options.extras_require]
linters =
    mypy
    pylint
    bandit

formatters =
    autoflake
    black
    isort

tests =
    assertpy
    coverage
    freezegun
    mock
    pytest
    pytest-mocha
    pytest-sugar
    tox

release =
    bump2version
    quickdocs
    twine
    wheel
